--- a/publicaciones.html
+++ b/publicaciones.html
@@ -74,7 +74,6 @@
                         <div class="nav-about-me-title">James Vásquez</div>
                         <img class="nav-location-icon" src="img/posision.png">
                         <div class="nav-location-title">Perú</div>
-                        <p class="menu-profile-paragraph">Encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="index.html">Inicio</a>
@@ -83,7 +82,7 @@
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Videos</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
-                <a class="nav-link w-nav-link" href="https://www.paypal.com/donate/?hosted_button_id=3MN8ACLBBFVFA">Donar</a>
+                <a class="nav-link w-nav-link" href="info.html">Información</a>
             </nav>
             <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
@@ -119,22 +118,6 @@
                 <div class="main-content-wrapper">
                     <div class="blog-posts-list-wrapper w-dyn-list">
                         <div class="blog-posts-list w-clearfix w-dyn-items w-row">
-
-                            <div class="blog-card-post w-col w-col-6 w-dyn-item">
-                                <a class="blog-post-image-link-block card w-inline-block" href="ventajasdewword.html" style="background-image: url('https://images.pexels.com/photos/96593/pexels-photo-96593.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
-                                    <div class="blog-post-image-overlay">
-                                        <div class="blog-card-title-wrapper">
-                                            <div class="blog-card-title">Ventajas de Word que nos permiten elaborar mejores documentos</div>
-                                        </div>
-                                        <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
-                                            <div class="blog-post-author-title small">James</div>
-                                            <div class="blog-post-date small">Ene 11, 2022</div>
-                                        </div>
-                                    </div>
-                                </a>
-                                <a class="blog-tag-button card w-button" href="tecnologia.html" style="background-color: #1877f5;">Computación</a>
-                            </div>
 
                             <div class="blog-card-post w-col w-col-6 w-dyn-item">
                                 <a class="blog-post-image-link-block card w-inline-block" href="chipsapple.html" style="background-image: url('https://images.pexels.com/photos/4048766/pexels-photo-4048766.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
