--- a/ventajasdewword.html
+++ b/ventajasdewword.html
@@ -21,7 +21,7 @@
         <meta name="twitter:description" content="Conocer las ventajas de Word es indispensable para los estudios y el trabajo ¿Por qué? Pues, constantemente nos encontramos elaborando reportes, cartas, invitaciones, artículos u otro tipo de documentos..."/>
         <meta name="twitter:card" content="photo"/>
         <meta name="twitter:site" content="@jamesvasquezg"/>
-        <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe/marruecosisuenergiasolar.html" />
+        <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe/ventajasdewword.html" />
         <meta name="twitter:image" content="https://jamesvasquezg.github.io/pe/img/ventajasdeord.png"/>
         <!--###################-->
             
@@ -30,7 +30,7 @@
         <meta property="og:description" content="Conocer las ventajas de Word es indispensable para los estudios y el trabajo ¿Por qué? Pues, constantemente nos encontramos elaborando reportes, cartas, invitaciones, artículos u otro tipo de documentos..."/>
         <meta property="og:type" content="Article" />
         <meta property="og:site_name" content="Marruecos y su energía solar"/>
-        <meta property="og:url" content="https://jamesvasquezg.github.io/pe/marruecosisuenergiasolar.html" />
+        <meta property="og:url" content="https://jamesvasquezg.github.io/pe/ventajasdewword.html" />
         <meta property="og:image" content="https://jamesvasquezg.github.io/pe/img/ventajasdeword.png"/>
         
         <!--Javascript, fuentes y CSS Estilos-->
