--- a/ventajasdewword.html
+++ b/ventajasdewword.html
@@ -22,7 +22,7 @@
         <meta name="twitter:card" content="photo"/>
         <meta name="twitter:site" content="@jamesvasquezg"/>
         <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe/ventajasdewword.html" />
-        <meta name="twitter:image" content="https://jamesvasquezg.github.io/pe/img/ventajasdeord.png"/>
+        <meta name="twitter:image" content="https://jamesvasquezg.github.io/pe/img/ventajasdeword.png"/>
         <!--###################-->
             
         <!-- Open Graph data Facebook -->
