--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <meta name="author" content="James Vásquez"/>
         <meta name="title" content="James Vásquez" >
-        <meta name="description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
+        <meta name="description" content="Información sobre ingeniería, computación y tecnología"/>
         <meta name="disribution" content="global"/>
         <meta name="copyright" content="Copyright 2022 by James Vásquez" />
         <meta name="theme-color" content="#005371"/>
@@ -18,7 +18,7 @@
 
         <!--Targetas de Twitter-->
         <meta name="twitter:title" content="James Vásquez"/>
-        <meta name="twitter:description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
+        <meta name="twitter:description" content="Las últimas novedades sobre  ingeniería, computación y tecnología"/>
         <meta name="twitter:card" content="photo"/>
         <meta name="twitter:site" content="@jamesvasquezg"/>
         <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe" />
@@ -27,7 +27,7 @@
     
         <!-- Open Graph data Facebook -->
         <meta property="og:title" content="James Vásquez"/>
-        <meta property="og:description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
+        <meta property="og:description" content="Las últimas novedades sobre  ingeniería, computación y tecnología"/>
         <meta property="og:type" content="Article" />
         <meta property="og:site_name" content="James Vásquez"/>
         <meta property="og:url" content="https://jamesvasquezg.github.io/pe" />
@@ -72,18 +72,19 @@
                     </div>
                     <div class="nav-about-content-block">
                         <div class="nav-about-me-title">James Vásquez</div>
-                        <img class="nav-location-icon" src="img/posision.png">
-                        <div class="nav-location-title">Perú</div>
-                        <p class="menu-profile-paragraph">Encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
+                        <!--<img class="nav-location-icon" src="img/posision.png">-->
+                        <!--<div class="nav-location-title">Latinoamérica</div>-->
+                        <!--<p class="menu-profile-paragraph">Las últimas novedades sobre  ingeniería, computación y tecnología</p>-->
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="index.html">Inicio</a>
                 <a class="nav-link w-nav-link" href="categorias.html">Categorías</a>
-                <a class="nav-link w-nav-link" href="publicaciones.html">Publicaciones</a>
-                <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Videos</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Youtube</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
-                <a class="nav-link w-nav-link" href="https://www.paypal.com/donate/?hosted_button_id=3MN8ACLBBFVFA">Donar</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.tiktok.com/jamesvasquezg">TikTok</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.instagram.com/jamesvasquezg">Instagram</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://wa.me/message/HZGSC2LZ5IT6D1">WhatsApp</a>
             </nav>
             <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
@@ -104,7 +105,7 @@
                 <div class="centered left-section-content-wrapper">
                     <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/favicon.png">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Bienvenido</h1>
-                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
+                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra las últimas novedades sobre  ingeniería, computación y tecnología</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
                         <a class="color left-section-social-button w-button" target="_blak" href="https://www.facebook.com/jamesvasquezg">Facebook</a>
                         <a class="color left-section-social-button twitter w-button" target="_blak" href="https://twitter.com/jamesvasquezg">Twitter</a>
