--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="index.html">Inicio</a>
+                <a class="nav-link w-nav-link" href="publicaciones.html">Publicaciones</a>
                 <a class="nav-link w-nav-link" href="categorias.html">Categorías</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Youtube</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
-                <a class="nav-link w-nav-link" target="_blank" href="https://www.tiktok.com/jamesvasquezg">TikTok</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.tiktok.com/@jamesvasquezg">TikTok</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.instagram.com/jamesvasquezg">Instagram</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://wa.me/message/HZGSC2LZ5IT6D1">WhatsApp</a>
             </nav>
