--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="centered left-section-content-wrapper">
                     <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/favicon.png">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Bienvenido</h1>
-                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra las últimas novedades sobre  ingeniería, computación y tecnología</h2>
+                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra las últimas novedades sobre  Ingeniería Mecánica y Eléctrica</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
                         <a class="color left-section-social-button w-button" target="_blak" href="https://www.facebook.com/jamesvasquezg">Facebook</a>
                         <a class="color left-section-social-button twitter w-button" target="_blak" href="https://twitter.com/jamesvasquezg">Twitter</a>
@@ -121,6 +121,22 @@
                 <div class="main-content-wrapper">
                     <div class="blog-posts-list-wrapper w-dyn-list">
                         <div class="blog-posts-list w-clearfix w-dyn-items w-row">
+
+                            <div class="blog-card-post w-col w-col-6 w-dyn-item">
+                                <a class="blog-post-image-link-block card w-inline-block" href="plantasolarrubi.html" style="background-image: url('https://images.pexels.com/photos/6729421/pexels-photo-6729421.jpeg?auto=compress&cs=tinysrgb&w=600');">
+                                    <div class="blog-post-image-overlay">
+                                        <div class="blog-card-title-wrapper">
+                                            <div class="blog-card-title">Rubí, la planta de energía solar más grande del Perú</div>
+                                        </div>
+                                        <div class="blog-post-author-wrapper card w-clearfix">
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
+                                            <div class="blog-post-author-title small">James</div>
+                                            <div class="blog-post-date small">Jun 20, 2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="blog-tag-button card w-button" href="tecnologia.html" style="background-color: #52df59;">Ingeniería</a>
+                            </div>
 
                             <div class="blog-card-post w-col w-col-6 w-dyn-item">
                                 <a class="blog-post-image-link-block card w-inline-block" href="ventajasdewword.html" style="background-image: url('https://images.pexels.com/photos/96593/pexels-photo-96593.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
