--- a/index.html
+++ b/index.html
@@ -122,6 +122,22 @@
                         <div class="blog-posts-list w-clearfix w-dyn-items w-row">
 
                             <div class="blog-card-post w-col w-col-6 w-dyn-item">
+                                <a class="blog-post-image-link-block card w-inline-block" href="autosolar.html" style="background-image: url('https://images.pexels.com/photos/5628290/pexels-photo-5628290.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load');">
+                                    <div class="blog-post-image-overlay">
+                                        <div class="blog-card-title-wrapper">
+                                            <div class="blog-card-title">Lightyear 0 el primer vehículo asistido por energía solar</div>
+                                        </div>
+                                        <div class="blog-post-author-wrapper card w-clearfix">
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
+                                            <div class="blog-post-author-title small">James</div>
+                                            <div class="blog-post-date small">Jun 20, 2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="blog-tag-button card w-button" href="tecnologia.html" style="background-color: #52df59;">Ingeniería</a>
+                            </div>
+
+                            <div class="blog-card-post w-col w-col-6 w-dyn-item">
                                 <a class="blog-post-image-link-block card w-inline-block" href="plantasolarrubi.html" style="background-image: url('https://images.pexels.com/photos/6729421/pexels-photo-6729421.jpeg?auto=compress&cs=tinysrgb&w=600');">
                                     <div class="blog-post-image-overlay">
                                         <div class="blog-card-title-wrapper">
