--- a/autosolar.html
+++ b/autosolar.html
@@ -22,7 +22,7 @@
         <meta name="twitter:card" content="photo"/>
         <meta name="twitter:site" content="@jamesvasquezg"/>
         <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe/autosolar.html" />
-        <meta name="twitter:image" content="https://jamesvasquezg.github.io/pe/img/autosolar.webp"/>
+        <meta name="twitter:image" content="https://jamesvasquezg.github.io/pe/img/autosolar.jpg"/>
         <!--###################-->
             
         <!-- Open Graph data Facebook -->
@@ -31,7 +31,7 @@
         <meta property="og:type" content="Article" />
         <meta property="og:site_name" content="Rubí, la planta de energía solar más grande del Perú"/>
         <meta property="og:url" content="https://jamesvasquezg.github.io/pe/autosolar.html" />
-        <meta property="og:image" content="https://jamesvasquezg.github.io/pe/img/autosolar.webp"/>
+        <meta property="og:image" content="https://jamesvasquezg.github.io/pe/img/autosolar.jpg"/>
         
         <!--Javascript, fuentes y CSS Estilos-->
         <link href="css/stylos.css" rel="stylesheet" type="text/css">
