--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.tiktok.com/@jamesvasquezg">TikTok</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.instagram.com/jamesvasquezg">Instagram</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://wa.me/message/X6WVCFMMH4UYC1">WhatsApp</a>
             
             </nav>
             <div class="menu-button w-nav-button">
