--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="index.html">Inicio</a>
-                <a class="nav-link w-nav-link" href="categorias.html">Categorías</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.paypal.com/donate/?hosted_button_id=3MN8ACLBBFVFA">Donar</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Youtube</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.tiktok.com/@jamesvasquezg">TikTok</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.instagram.com/jamesvasquezg">Instagram</a>
-                <a class="nav-link w-nav-link" target="_blank" href="https://wa.me/message/X6WVCFMMH4UYC1">WhatsApp</a>
             
             </nav>
             <div class="menu-button w-nav-button">
@@ -106,7 +105,7 @@
                 <div class="centered left-section-content-wrapper">
                     <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/favicon.png">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Bienvenido</h1>
-                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra las últimas novedades sobre  Ingeniería Mecánica y Eléctrica</h2>
+                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra las últimas novedades sobre energía eléctrica</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
                         <a class="color left-section-social-button w-button" target="_blak" href="https://www.facebook.com/jamesvasquezg">Facebook</a>
                         <a class="color left-section-social-button twitter w-button" target="_blak" href="https://twitter.com/jamesvasquezg">Twitter</a>
