--- a/marruecosisuenergiasolar.html
+++ b/marruecosisuenergiasolar.html
@@ -116,6 +116,7 @@
                         </div>
 
                         <div class="texto">La energía solar en Marruecos está transformando el escenario de las energías renovables. Una de las plantas de energía solar más grandes del mundo está situada en Marruecos
+                            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@jamesvasquezg/video/7187568647903218949" data-video-id="7187568647903218949" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@jamesvasquezg" href="https://www.tiktok.com/@jamesvasquezg?refer=embed">@jamesvasquezg</a> <a title="bioluminiscencia" target="_blank" href="https://www.tiktok.com/tag/bioluminiscencia?refer=embed">#Bioluminiscencia</a> <a target="_blank" title="♬ sonido original  - James Vásquez" href="https://www.tiktok.com/music/sonido-original-James-Vásquez-7187569944098671365?refer=embed">♬ sonido original  - James Vásquez</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
                             <hr>
                             Cuando Jaouad Ait Rebah atraviesa los montes del Alto Atlas, trae luz propia a sus habitantes. Este empresario marroquí instala paneles solares en los pueblos pintorescos del macizo. Para los lugareños supone una notable mejora de la calidad de vida.
                             Porque los pueblos solo son pintorescos para quien los visita. Aquí vive gente pobre y los jóvenes han partido en busca de trabajo. Pero los colectores solares traen nuevos tiempos a los pueblos.
