--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="index.html">Inicio</a>
-                <a class="nav-link w-nav-link" target="_blank" href="https://www.paypal.com/donate/?hosted_button_id=3MN8ACLBBFVFA">Donar</a>
-                <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Youtube</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://usoftec.com">Donar</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Usoftec</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.tiktok.com/@jamesvasquezg">TikTok</a>
